[package]
name = "first-rs"
version = "0.1.4"
edition = "2021"
license = "Unlicense"

repository = "https://github.com/removed0/rust-is-cool"
description = "trying out rust"
readme = "README"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
